[B]v1.6.0(Tuesday, 11 November 2014):[/B]
  - Fixed HugeFiles resolver
  - Added 360gig resolver
  - Fixed 180Upload resolver to attempt captcha bypass

[B]v1.5.1(Sunday, 06 June 2014):[/B]
  - Fixed error in xml

[B]v1.5.0(Saturday, 06 June 2014):[/B]
  - Fixed bug on Watch & Download function
  - Added Panda Planet source
  - Fixed download via jDownloader
  - Fixed Recently Added and Latest Releases main menu sections
  - Fixed local meta pack install
  - Added new Help menu option and info screen
  - Added !!BETA!! Axel Downloader support - enable via Addon Settings -> Downloads menu

[B]v1.4.2(Wednesday, 11 March 2014):[/B]
  - Fixed bug on small notification box, adding favourites
  - Added check on resolvers with captchas for entering wrong captcha, will notify you and let you retry

[B]v1.4.1(Tuesday, 11 March 2014):[/B]
  - Updated 180Upload resolver, added check for Google recaptcha
  - Fixed various bugs from last code update, msg boxes, hugefiles resolver
  - More code cleanup and optimizations
  
[B]v1.4.0(Saturday, 8 March 2014):[/B]
  - Added VidPlay resolver
  - Added MegaFiles resolver
  - Fixed bug where new unsupported sources would cause script errors
  - Lots of internal code cleanups
  
[B]v1.3.1(Sunday, 2 March 2014):[/B]
  - Fixed HugeFiles resolver

[B]v1.3.0 (Saturday, 1 March 2014):[/B]
  - Fixed BillionUploads resolvers
  - Fixed TV Show download location and hopefully all tv show script errors
  - Added new option to Addon Settings to set the meta data zip pack download location
  
[B]v1.2.1 (Monday, 30 December 2013):[/B]
  - Fixed BillionUploads and HugeFiles resolvers
  
  [B]v1.2.0 (Wednesday, 20 November 2013):[/B]
  - Added search for similar movies - highlight movie and open context menu
  
  [B]v1.1.41 (Thursday, 14 November 2013):[/B]
  - Fixed EpicShare resolver
  - Fixed TV Show subtitles script error
  - Added quality tags to source listings
  
  [B]v1.1.40 (Tuesday, 12 November 2013):[/B]
  - Fixed BillionUploads resolver