@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.icefilms"
        name="Icefilms"
-       version="1.6.0"
+       version="1.7.0"
        provider-name="Eldorado (originator: anarchintosh)">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
@@ -10,7 +10,8 @@
         <import addon="script.module.beautifulsoup" />
         <import addon="script.module.metahandler" version="2.5.1" />
         <import addon="script.module.addon.common" version="2.0.0" />
-        <import addon="script.module.axel.downloader" version="0.2.0" />
+        <import addon="script.module.axel.downloader" version="0.2.1" />
+        <import addon="script.module.pyxbmct" version="1.1.2" />
         <import addon="script.common.plugin.cache" /> 
     </requires>
     <extension point="xbmc.python.pluginsource"
